# executive-ai-assistant

./: .env.example  .gitignore  LLM_PROVIDERS.md  OpenAI Chat Assisstant  README.md  SETUP_GUIDE.md  config.yaml.example  langgraph.json  package-lock.json  package.json  pyproject.toml  sudo su && README.md  suiii.py  tailwind.config.js  testing_arcade.py
.github/: dependabot.yml
eaia/: agent_registry.py  cron_graph.py  gmail.py  llm_factory.py  prompt_registry.py  reflection_graphs.py  schemas.py
eaia/deepagent/: config.yaml  cron_deepagent.py  deepagent.py  google_utils.py  prompts.py  test_deepagent.py  types.py  utils.py
eaia/genui/: components.tsx  package.json
eaia/main/: config.py  config.yaml  draft_response.py  fewshot.py  find_meeting_time.py  graph.py  human_inbox.py  prompt_utils.py  rewrite.py  triage.py  utils.py
scripts/: find_triage_errors.py  generate_email_examples.py  quick_start.sh  run_ingest.py  run_single.py  setup_cron.py  setup_gmail.py
tests/: test_evals.py  test_rewriting  test_scheduling.py  test_triage.py
tests/test_deepagent/: test_finding_times.py  test_middleware.py  test_remembering.py  test_tool_calling.py
